Scripts/CreateInstancesTemplate.yaml
#   RMIT University Vietnam
#   Course: COSC2767 Systems Deployment and Operations
#   Semester: 2022B
#   Assessment: Assignment 2
#   Author: Truong Adam Nhat Anh
#   ID: s3926016
#   Created  date: 28/12/2023
#   Last modified: 29/12/2023
#   Acknowledgement: Acknowledge the resources that you use here.
Resources:
  Jenkins_Server1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-00b8917ae86a424c9 # Amazon Linux 2 AMI (us-east-1)
      InstanceType: t2.micro
      KeyName: s3926016_a2
      SecurityGroupIds:
        - !Ref Jenkins_Security_Group
  Jenkins_Security_Group:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "For Jenkins Server"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  Docker_Server1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-00b8917ae86a424c9 # Amazon Linux 2 AMI (us-east-1)
      InstanceType: t2.micro
      KeyName: s3926016_a2
      SecurityGroupIds:
        - !Ref Docker_Security_Group
  Docker_Security_Group:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "For Docker Server"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8090
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
